refactor: clean code and change padding, max-width

--- a/src/components/feedback-card.html
+++ b/src/components/feedback-card.html
@@ -4,6 +4,6 @@
   <p class="feedback-card_name {{nameClass}}">{{name}}</p>
   <p class="feedback-card_address">{{address}}</p>
   <div class="feedback-card_avatar {{avatarClass}}">
-    <img src="{{avatar}}" />
+    <img src="{{avatar}}" class="img-main" />
   </div>
 </div>
