--- a/src/components/plans-card.html
+++ b/src/components/plans-card.html
@@ -1,8 +1,8 @@
 <div class="plans-card">
   <div class="plans-card_top">
-    <img src="{{planImage}}" alt="plan image" class="plans-card_img" />
+    <img src="{{planImage}}" alt="plan image" class="plans-card_img img-main" />
     <figcaption>
-      <p class="plans-card_title">{{planTitle}}</p>
+      <p class="plans-card_title title-secondary">{{planTitle}}</p>
       <p class="plans-card_price">{{planPrice}}</p>
     </figcaption>
   </div>
