--- a/src/layouts/footer.html
+++ b/src/layouts/footer.html
@@ -4,7 +4,7 @@
         <include
           src="./components/footer-list.html"
           locals='{
-                      "title": "COMPANY",
+                      "title": "company",
                       "list":"[`News`,`Blog`,`Testimonials`,`About Us`,`Press Kit`,`Get in Touch`,]"
                   }'
         ></include>
@@ -12,21 +12,21 @@
         <include
           src="./components/footer-list.html"
           locals='{
-                "title": "PRODUCTS",
+                "title": "products",
                 "list":"[`UI Kits`, `Icons`,`Wordpress Themes`,`Mock-Ups`,]"
             }'
         ></include>
         <include
           src="./components/footer-list.html"
           locals='{
-                "title": "SUPPORT",
+                "title": "support",
                 "list":"[`Community`, `Forum`,`Distributors`,`Privacy Policy`,`Term of Use`,]"
             }'
         ></include>
         <include
           src="./components/footer-list.html"
           locals='{
-                "title": "CUSTOMERS",
+                "title": "customers",
                 "list":"[`Documentation`,`Tools`,`Downloads`,`Developer Center`]"
             }'
         ></include>
