--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -4,7 +4,7 @@
     padding: 13px 25px;
     background-color: $background-color;
     outline: none;
-    border-radius: pxToRem(3);
+    border-radius: 3px;
     border: none;
     width: 100%;
     font-family: $primary-font;
