--- a/src/components/result-card.html
+++ b/src/components/result-card.html
@@ -1,8 +1,8 @@
 <div class="result-card">
     <div class="result-card_circle">
-        <img src="{{resultImage}}" />
+        <img class="img-main" src="{{resultImage}}" />
         <span class="result-card_percent">{{resultPercent}}<sup>,{{resultSup}}</sup></span>
     </div>
-    <h3 class="result-card_title">{{resultTitle}}</h3>
+    <h3 class="result-card_title title-secondary">{{resultTitle}}</h3>
     <p class="result-card_desc">{{resultDesc}}</p>
 </div>
