--- a/src/stylesheets/components/_feedbackCard.scss
+++ b/src/stylesheets/components/_feedbackCard.scss
@@ -48,15 +48,15 @@
   }
 
   &_content {
-    font-size: 1.125rem;
+    font-size: pxToRem(18);
     padding: 20px 0 30px;
     @include tablet {
       font-size: pxToRem(11);
-      line-height: 1rem;
+      line-height: pxToRem(16);
     }
   }
   &_name {
-    font-size: 1.5rem;
+    font-size: pxToRem(24);
     padding-bottom: 10px;
 
     @include tablet {
@@ -95,11 +95,6 @@
       height: 64px;
       right: 50%;
       transform: translate(50%, 50%);
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
     }
   }
 }
