--- a/src/stylesheets/components/_plan-card.scss
+++ b/src/stylesheets/components/_plan-card.scss
@@ -39,8 +39,7 @@
   }
 
   &_img {
-    width: 100%;
-    height: 100%;
+
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
   }
@@ -53,10 +52,10 @@
     transform: translate(-50%, -50%);
     color: $background-color;
     display: block;
-    line-height: 40px;
+    line-height: pxToRem(40);
 
     @include tablet {
-      line-height: 20px;
+      line-height: pxToRem(20);
     }
   }
 
@@ -72,7 +71,7 @@
     &::before {
       position: absolute;
       content: "$";
-      font-size: 1.5rem;
+      font-size: pxToRem(24);
       width: 100%;
       top: 58%;
       left: 56%;
@@ -86,7 +85,7 @@
 
   &_content {
     text-align: center;
-    line-height: 1.5;
+    line-height: pxToRem(24);
     max-width: 260px;
     margin: 0 auto;
     margin-top: 13px;
@@ -100,7 +99,7 @@
   padding: 11px 48px;
   text-align: center;
   text-transform: uppercase;
-  border-radius: 2rem;
+  border-radius: pxToRem(32);
 
   &:hover {
     border-radius: 2px solid $primary-color;
@@ -110,10 +109,10 @@
   @include tablet {
     border: 2px solid $text-color;
     margin: 10px auto 26px;
-    padding: 0.7rem 1.25rem;
+    padding: pxToRem(11) pxToRem(20);
   }
 
   @include mobile {
-    padding: 0.4rem 1.25rem;
+    padding: pxToRem(6) pxToRem(20);
   }
 }
