--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -94,10 +94,12 @@
 
     @include tablet {
       width: 220px;
+      
     }
 
     @include mobile {
       padding-top: 0;
+      margin: 0;
     }
   }
 
