--- a/src/stylesheets/pages/home/_contact.scss
+++ b/src/stylesheets/pages/home/_contact.scss
@@ -14,12 +14,9 @@
     @include flex($direction: column);
     border-radius: pxToRem(10);
 
-    @include tablet {
-      max-width: 22.5rem;
-    }
-
     @include mobile {
       padding: 35px;
+      max-width: 279px;
     }
 
     &_input {
@@ -29,7 +26,7 @@
 
   &_info {
     @include flex($align: center, $justify: center, $wrap: wrap);
-    margin-left: -1rem;
+    margin-left: -16px;
     font-size: pxToRem(18);
     gap: 16px;
 
@@ -52,10 +49,10 @@
     }
 
     &_item {
-      margin-left: 1rem;
+      margin-left: pxToRem(16);
 
       @include tablet {
-        margin-left: 1.5rem;
+        margin-left:pxToRem(24);
       }
 
       @include mobile {
@@ -83,12 +80,19 @@
 .btn {
   padding: 15px 54px;
   text-align: center;
-  border-radius: 2rem;
+  border-radius: 30px;
   cursor: pointer;
   border: 2px solid $primary-color;
   background-color: $primary-color;
   margin: 0 auto;
   max-width: 198px;
+
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.05);
+
+  }
 }
 
 .title {
